[package]
name = "monee"
version = "0.0.4"
authors = ["dantuck <gitlab@dantuck.com>"]
edition = "2018"
license = "GPL-3.0"
description = "Money parser"
keywords = ["accounting", "finance"]
repository = "https://gitlab.com/dantuck/monee"
documentation = "https://docs.rs/monee"
readme = "README.md"

[dependencies]
lazy_static = "1.4.0"